force-app/main/default/objects/LLC_BI__Relationship_Loan_to_Value_Calculation__c/LLC_BI__Relationship_Loan_to_Value_Calculation__c.object-meta.xml
<CustomObject>
    <description>The Relationship Loan to Value Calculation stores the value of calculations determined by RLTV Calc Config records.</description>
    <label>Relationship Loan to Value Calculation</label>
    <nameField>
        <label>Relationship Loan to Value Calc Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relationship Loan to Value Calculations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>