force-app/main/default/objects/LLC_BI__Relationship_Loan_to_Value_Calculation__c/fields/LLC_BI__Relationship_Loan_to_Value_Calc_Config__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Relationship_Loan_to_Value_Calc_Config__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system automatically populates this optional lookup field with the name of the configuration record where the calculation data is entered. By default, it is blank.</description>
    <inlineHelpText>This system-populated field displays the name of the configuration record where the calculation data is entered.</inlineHelpText>
    <label>Relationship Loan to Value Calc Config</label>
    <referenceTo>LLC_BI__Relationship_Loan_to_Value_Calc_Config__c</referenceTo>
    <relationshipLabel>Relationship Loan to Value Calculations</relationshipLabel>
    <relationshipName>Relationship_Loan_to_Value_Calculations</relationshipName>
    <type>Lookup</type>
</CustomField>